# renderer

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
opengl.xcodeproj/: project.pbxproj
src/: main.cpp
